--- a/index.html
+++ b/index.html
@@ -112,13 +112,18 @@
     <td colspan="2"></td>
 </tr>
 
-
-
-
-
-
-
-
-  </table>
+  </table><br>
+  <table>
+    <tr>
+        <td>elaboro </td>
+        <td> aprobo</td>
+        <td>valido</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+</table>
 </body>
 </html>
