--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/csstyle.css">
 </head>
 <body>
-    <h1>formullario de ficha tecnica</h1>
+    <h1>formulario de ficha tecnica</h1>
   <table>
 <tr>
 <th colspan="3">caracteristicas del producto</th>
