--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="container">
 
         <div class="box">Nombre del producto<input type="text" id="name"></div>
-        <div class="box">Linea del producto<input type="text" id="linea"></div>
-        <div class="box">versiones anteriores<input type="text" id="versiones"></div>
+        <div class="box">Línea del producto<input type="text" id="linea"></div>
+        <div class="box">Versiones anteriores<input type="text" id="versiones"></div>
         <div class="box">Version actual <td colspan="2"><input type="text" id="versionactual"></div>
         <div class="box">Modulo<input type="text" id="modulo1"></td>
         </div>
-        <div class="box">Descripcion general del producto <input type="text" id="descripcion"></div>
-        <div class="box">Descrpcion de arquitectura<input type="text" id="arquitectura1"></div>
+        <div class="box">Descripción general del producto <input type="text" id="descripcion"></div>
+        <div class="box">Descripción de arquitectura<input type="text" id="arquitectura1"></div>
         <div class="box">Hardware<input type="text" id="requerimientoshd"></div>
         <div class="box">Software<input type="text" id="requerimientossw"></div>
         <div class="box">Otros requerimientos <input type="text" id="requerimientosOtros"></div>
@@ -33,14 +33,14 @@
         <div class="box">Clientes del producto <input type="text" id="cliente"></div>
     </div>
     </div><br>
-    <div class="button"><button onclick="comprobar()">enviar </button></div>
+    <div class="button"><button onclick="comprobar()">Enviar </button></div>
 
 
     <!-- inicio de la tabla de respuesta -->
     <div class="table-box">
         <table>
             <tr>
-                <th colspan="3">Caracteristicas del producto</th>
+                <th colspan="3">Características del producto</th>
             </tr>
             <tr>
                 <td>Nombre del producto</td>
@@ -48,7 +48,7 @@
 
             </tr>
             <tr>
-                <td>Linea del producto</td>
+                <td>Línea del producto</td>
                 <td colspan="2" id="linea-res"></td>
             </tr>
             <tr>
@@ -71,17 +71,17 @@
                 
             </tr>
             <tr>
-                <th colspan="3">Descripcion del producto</th>
+                <th colspan="3">Descripción del producto</th>
             </tr>
             <tr>
-                <td>Descripcion general del producto</td>
+                <td>Descripción general del producto</td>
                 <td colspan="2" id="rtadescripcion"> </td>
             </tr>
             <tr>
                 <th colspan="3">Arquitectura</th>
             </tr>
             <tr>
-                <td>descripcion</td>
+                <td>descripción</td>
                 <td colspan="2" id="rtaarquitectura"></td>
             </tr>
             <tr>
